<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueberryStrong"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="30dp"
    tools:context="com.example.macintosh.myduolingo.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_txt_rounded_border_top"
            android:hint="@string/txt_hint_user_login"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:textColorHint="@color/cloudStrong"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_txt_rounded_border_bottom"
            android:hint="@string/txt_hint_user_password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:textColorHint="@color/cloudStrong"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_btn_rounded_full_transparent"
            android:enabled="false"
            android:paddingVertical="14dp"
            android:text="@string/btn_text_enter"
            android:textAllCaps="true"
            android:textColor="@color/btnDisabled"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_btn_full_transparent"
            android:paddingVertical="14dp"
            android:text="@string/btn_text_forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/creme"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/txtv_one_tap_sign_in"
            android:textColor="@color/creme"
            android:textStyle="bold"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/shape_white_button"
                android:paddingVertical="14dp"
                android:text="@string/btn_text_google"
                android:textColor="#757575"
                android:textSize="16sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/shape_btn_facebook"
                android:paddingVertical="14dp"
                android:text="@string/btn_text_facebook"
                android:textColor="@color/creme"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>