<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayMedium"
    android:orientation="vertical"
    tools:context="com.example.macintosh.myduolingo.WhatIsYourNameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btn_full_transparent"
                android:src="@drawable/ic_action_close" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1/3"
                android:textAlignment="viewEnd"
                android:textColor="@color/blueberryClear"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="center"
        android:textStyle="bold"
        android:text="¿Cuál es tu nombre?"
        android:textAlignment="center"
        android:textColor="@color/licoriceStrong"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_white_input"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:textColorHint="@color/cloudStrong"
            android:layout_marginBottom="15dp"
            android:inputType="text"
            android:textSize="18sp"
            android:hint="Nombre" />
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_principal_button"
            android:paddingVertical="14dp"
            android:text="@string/btn_text_continue"
            android:textAllCaps="true"
            android:textColor="@color/creme"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/txtv_one_tap_sign_in"
            android:textColor="@color/licoriceStrong"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:paddingVertical="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/shape_white_button"
                android:elevation="0dp"
                android:paddingVertical="14dp"
                android:text="@string/btn_text_google"
                android:textColor="#757575"
                android:textSize="16sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/shape_btn_facebook"
                android:paddingVertical="14dp"
                android:text="@string/btn_text_facebook"
                android:textColor="@color/creme"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>